@@ -295,7 +295,8 @@ enum BUFF_ICONS
 	BI_CADDELLITEINFUSED,
 	BI_POTIONOFGLORIOUSFORTUNE,
 	BI_MYSTICALPOLYMORPHTOTEM,
-	BI_DISCORDANCEDEBUFF
+	BI_DISCORDANCEDEBUFF,
+	BI_CHALICEOFPILFERINGPROTECTION
 };
 
 struct CSectorEnviron		// When these change it is an CTRIG_EnvironChange
