@@ -4,7 +4,7 @@
 // You may not use this file except in compliance with the License.
 // You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 //****************************************************************************
-// FILE LAST UPDATED: Thursday, Feb 3, 2022
+// FILE LAST UPDATED: Thursday, Apr 28, 2022
 
 // WARNING: Modifing this file, without knowing what you are doing, can make Sphere behave incorrectly.
 
@@ -22,6 +22,7 @@ ENC_TFISH  3 // Twofish
 
 [SPHERECRYPT]
 //Classic Clients
+7009500 03B1D220D 0A915BE7F ENC_TFISH // 7.0.95
 7009400 03B46A81D 0A900A27F ENC_TFISH // 7.0.94
 7009300 03B88322D 0A96F9E7F ENC_TFISH // 7.0.93
 7009200 03BF1803D 0A94A127F ENC_TFISH // 7.0.92
@@ -176,6 +177,7 @@ ENC_TFISH  3 // Twofish
 2000000 02D13A5FD 0A39D527F ENC_BFISH // 2.0.0
 
 //Enhanced Clients
+067900950 0191D220D 0B815BE7F ENC_TFISH // 4.0.95
 067900940 01946A81D 0B800A27F ENC_TFISH // 4.0.94
 067900930 01988322D 0B86F9E7F ENC_TFISH // 4.0.93
 067900920 019F1803D 0B84A127F ENC_TFISH // 4.0.92
